--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,12 @@ button {
   }
 }
 
-@media screen and (min-width: 600px){
+input {
+  all: unset;
+}
+
+@media screen and (max-width: 480px){
   html {
-    font-size: 16px;
+    font-size: 12px;
   }
 }
