--- a/src/pages/Game/Selection/Selection.css
+++ b/src/pages/Game/Selection/Selection.css
@@ -6,8 +6,10 @@
 
   row-gap: 1rem;
 
-  height: 90vh;
+  height: 100%;
   width: 90vw;
+
+  margin: 1.5rem 0;
 
   grid-template-columns: 20vw 1fr;
   grid-template-areas:
